# TRY1

./: .gitignore  .gitmodules  README.md  SETUP.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/kala/arichta/: AppPreferences.kt
app/src/main/java/com/kala/arichta/audio/: AudioFocusManager.kt  AudioFocusService.kt  AudioRecorder.kt
app/src/main/java/com/kala/arichta/contacts/: Contact.kt  ContactRepository.kt
app/src/main/java/com/kala/arichta/engine/: EngineFactory.kt  GgmlSpeechEngine.kt  MelSpectrogram.kt  OnnxSpeechEngine.kt  SpeechEngine.kt
app/src/main/java/com/kala/arichta/nlp/: ContactMatcher.kt  HebrewCommandParser.kt  HebrewNumberParser.kt
app/src/main/java/com/kala/arichta/ui/: DisambiguationActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/kala/arichta/whisper/: WhisperEngine.kt
app/src/main/kotlin/com/qalaarikha/assistant/: App.kt  MainActivity.kt
app/src/main/kotlin/com/qalaarikha/assistant/domain/: ContactMatcher.kt  (+2 more)
app/src/main/res/drawable/: badge_circle.xml  ic_mic_pulse.xml
app/src/main/res/layout/: activity_disambiguation.xml  activity_main.xml  activity_settings.xml  item_disambiguation.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  preferences.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
